--- a/index.html
+++ b/index.html
@@ -14,22 +14,24 @@
             margin: 0;
             padding: 0;
         }
-        
+
         .container {
             flex: 1;
             display: flex;
             flex-direction: column;
-            padding: 20px;
+            padding: 10px;
             box-sizing: border-box;
         }
 
         .header {
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
             margin-bottom: 10px;
         }
         .header > * {
             margin-right: 10px;
+            margin-bottom: 10px;
         }
 
         body {
@@ -41,20 +43,21 @@
         .board {
             flex: 1;
             display: flex;
+            flex-direction: column;
             overflow-x: auto;
-            overflow-y: hidden;
             padding-bottom: 20px;
         }
 
         .column {
-            flex: 0 0 250px;
-            margin-right: 10px;
+            flex: 0 0 auto;
+            margin-bottom: 20px;
             background-color: #e0e0e0;
             border-radius: 5px;
             padding: 10px;
             display: flex;
             flex-direction: column;
-            max-height: 100%;
+            width: 100%;
+            max-width: 100%;
         }
 
         .column-content {
@@ -105,14 +108,15 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0,0,0,0.4);
+            overflow-y: auto;
         }
         .modal-content {
             background-color: #fefefe;
             margin: 5% auto;
             padding: 20px;
             border: 1px solid #888;
-            width: 80%;
-            max-width: 800px;
+            width: 90%;
+            max-width: 600px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
@@ -171,8 +175,13 @@
         }
         .form-buttons {
             display: flex;
+            flex-wrap: wrap;
             justify-content: flex-end;
             margin-top: 20px;
+        }
+        .form-buttons button {
+            margin-left: 10px;
+            margin-bottom: 10px;
         }
         .save-btn {
             background-color: #4CAF50;
@@ -181,7 +190,6 @@
         .cancel-btn {
             background-color: #f0f0f0;
             color: #333;
-            margin: 0 25px;
         }
         #projectList {
             list-style-type: none;
@@ -280,9 +288,29 @@
 
         #projectForm {
             display: block;
-            .save-btn {
-                background-color: #000;
-                margin: 15px;
+        }
+        #projectForm .save-btn {
+            background-color: #000;
+            margin: 15px 0;
+        }
+
+        @media (min-width: 768px) {
+            .board {
+                flex-direction: row;
+                overflow-x: auto;
+                overflow-y: hidden;
+            }
+            .column {
+                flex: 0 0 250px;
+                margin-right: 10px;
+                margin-bottom: 0;
+                max-height: calc(100vh - 150px);
+            }
+            .header {
+                flex-wrap: nowrap;
+            }
+            .form-buttons {
+                flex-wrap: nowrap;
             }
         }
     </style>
