--- a/noise.html
+++ b/noise.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Noise Generator</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI2NCIgaGVpZ2h0PSI2NCIgdmlld0JveD0iMCAwIDY0IDY0Ij48cmVjdCB4PSIxMCIgeT0iMjAiIHdpZHRoPSI4IiBoZWlnaHQ9IjI0IiBmaWxsPSIjZmZmZmZmIi8+PHJlY3Qg eD0iMjYiIHk9IjE0IiB3aWR0aD0iOCIgaGVpZ2h0PSIzNiIgZmlsbD0iI2ZmZmZmZiIvPjx yZWN0IHg9IjQyIiB5PSI4IiB3aWR0aD0iOCIgaGVpZ2h0PSI0OCIgZmlsbD0iI2ZmZmZmZiIvPjwvc3ZnPg==" />
     <style>
         body {
             background-color: #121212;
